Responsive Design + Editor
+ Applied responsive design to most of the website.

+ Updated the editor sidebar with the required necessary.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
         "cyto",
         "cytoscape",
         "Highcharts",
+        "katex",
         "networkgraph",
         "nshades",
         "viridis"
