--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
       "cytoscape-cola": "^2.5.0",
       "highcharts": "^9.3.1",
       "highcharts-react-official": "^3.1.0",
+      "katex": "^0.15.1",
       "node-sass": "^6.0.1",
       "react": "^17.0.2",
       "react-dom": "^17.0.2",
@@ -55,6 +56,7 @@
    },
    "devDependencies": {
       "@types/colormap": "^2.3.1",
-      "@types/cytoscape": "^3.19.0"
+      "@types/cytoscape": "^3.19.0",
+      "@types/katex": "^0.11.1"
    }
 }
