--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
       "highcharts": "^9.3.1",
       "highcharts-react-official": "^3.1.0",
       "katex": "^0.15.1",
-      "node-sass": "^6.0.1",
+      "node-sass": "npm:sass@^1.45.1",
       "react": "^17.0.2",
       "react-dom": "^17.0.2",
       "react-redux": "^7.2.6",
