--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
       "start": "react-scripts start",
       "build": "react-scripts build",
       "test": "react-scripts test",
-      "eject": "react-scripts eject"
+      "eject": "react-scripts eject",
+      "lint": "eslint --ext .tsx --ignore-path .gitignore ."
    },
    "eslintConfig": {
       "extends": [
@@ -57,6 +58,10 @@
    "devDependencies": {
       "@types/colormap": "^2.3.1",
       "@types/cytoscape": "^3.19.0",
-      "@types/katex": "^0.11.1"
+      "@types/katex": "^0.11.1",
+      "@typescript-eslint/eslint-plugin": "^5.14.0",
+      "@typescript-eslint/parser": "^5.14.0",
+      "eslint": "^8.10.0",
+      "eslint-plugin-react": "^7.29.3"
    }
 }
