Enabled Share Graph
Now users can share their graphs with friends and colleagues.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,12 +21,12 @@
       "@typescript-eslint"
    ],
    "rules": {
-      "indent": ["error", 3],
+      "indent": ["error", 3, { "SwitchCase": 1 }],
       "linebreak-style": ["error", "unix"],
       "quotes": ["error", "double"],
       "semi": ["error", "always"],
       "@typescript-eslint/no-empty-interface": [
-         "warn",
+         "off",
          {
             "allowSingleExtends": true
          }
