More Code Maintenance
Organized imports and addd comments to some the .ts files.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -30,6 +30,9 @@
          {
             "allowSingleExtends": true
          }
-      ]
+      ],
+      "@typescript-eslint/explicit-module-boundary-types": ["off", {
+         "allowExpressions": true
+       }]
    }
 }
